# django-intra

./: 404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  search.html  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: django.yml  docs.yml  pylint.yml  release.yml  test.yml
changelog/: index.html
configuration/: index.html
docs/: changelog.md  configuration.md  index.md
intra/: admin.py  apps.py  intra_settings.py  urls.py
search/: search_index.json
tests/: settings.py  tests.py  urls.py
