[metadata]
name = django-intra
version = 0.1.1
description = An extension of the Django admin application with special features
long_description = file: README.md
url = https://github.com/ahmdhjj/django-intra
project_urls=
    Documentation = https://ahmdhjj.github.io/django-intra/
    Source = https://github.com/ahmdhjj/django-intra
    Tracker = https://github.com/ahmdhjj/django-intra/issues
author = ahmdhjj
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.2
